vignettes/irace-package.Rnw: Improve single race description.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2423 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -2850,9 +2850,10 @@ can be evaluated for the given budget, thus, the initial random sampling
 performed by \irace may generate repeated configurations and/or never generate
 some configurations, which is not ideal. The ideal approach in such cases is to
 provide all configurations explicitly to \irace (\autoref{sec:initial}) and
-execute a single race (\parameter{nbIterations}\code{=1}). Hopefully, a future
-version of \irace will automatically detect this case and switch to basic
-racing.
+execute a single race (\parameter{nbIterations}\code{=1}) with exactly the
+number of configurations provided (e.g.,
+\parameter{nbConfigurations}\code{=10}). A future version of \irace will
+automatically detect this case and switch to basic racing without having to set additional options.
 
 %%
 %%
