Implement initConfigurations in scenario.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2430 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,10 @@
    (https://github.com/automl/ParameterImportance).
                                              (Nguyen Dang, Manuel López-Ibáñez)
 
+ * Initial configurations may also be provided directly in R using
+   `scenario$initConfigurations`
+                                                   (Manuel López-Ibáñez)
+ 
  * Rdata files are saved in version 2 to keep compatibility with older R
    versions.
                                                    (Manuel López-Ibáñez)
