* TODO: Add ideas from Patrick Schratz.

--- a/TODO
+++ b/TODO
@@ -4,6 +4,15 @@ BUGS: see BUGS file
 
 TODO R package:
 
+  * (Patrick Schratz) Usually people do not recommend r via homebrew because it
+    is compiled with gcc instead of clang which may cause issues at runtime. A
+    better approach is to use https://github.com/rmacoslib/r-macos-rtools. Of
+    course you are free to recommend whatever you want, just a pointer.
+  * (Patrick Schratz) Yeah I am actually responsible for the CI for ropensci
+    and deeply involved in this. Usually I’d recommend
+    https://github.com/ropensci/tic/ to get started. You can test on all major
+    platforms via Github Actions.
+
  * Look at https://cran.r-project.org/web/packages/argparser/index.html or
    optparse: See examples/optparse.R
    NOTE: Currently error messages cannot be
@@ -21,7 +30,8 @@ TODO R package:
  * Add inst/COPYRIGHTS. See race package.
 
  * Fix check-reverse so we can check reverse dependencies before
-   uploading to CRAN.
+   uploading to CRAN. Usually devs do it via
+   https://github.com/r-lib/revdepcheck locally once for every release.
 
   (This runs check-reverse, which check every reverse dependency. This
   may take some time to download all packages and check them.)
