--- a/vignettes/section/irace-options.tex
+++ b/vignettes/section/irace-options.tex
@@ -181,6 +181,9 @@ The maximum total time in seconds for the runs of \parameter{targetRunner} that 
  \defparameter{budgetEstimation}{budget-estimation}{0.02}%
 Fraction (smaller than 1) of the budget used to estimate the mean execution time of a configuration. Only used when \parameter{maxTime} $> 0$. See \autoref{sec:budget}.
 
+ \defparameter{minMeasurableTime}{min-measurable-time}{0.01}%
+Minimum time unit that is still (significantly) measureable.
+
 \end{description}
 
 \subsection[Statistical test]{Statistical test}
