* vignettes/irace-package.Rnw: Explicitly require xparse to fix travis build.

--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -6,6 +6,7 @@
 %\VignetteDepends{knitr}
 %\VignetteCompiler{knitr}
 \synctex=1
+\RequirePackage{xparse}
 \RequirePackage[dvipsnames]{xcolor}
 \documentclass[a4paper,english]{article}
 \usepackage[T1]{fontenc}
